  is present
* (bug 27016) dumpTextPass.php now consider the "output" parameter
* (bug 22606) don't send the "someone registred an account" message when setting email address
  (i.e. old one empty) in user preferences
* (bug 26458) Section edit links appear on pages that user does not have right to edit

=== API changes in 1.17 ===
* BREAKING CHANGE: action=patrol now requires POST
* BREAKING CHANGE: patrol token is no longer the same as edit token
* BREAKING CHANGE: Session keys returned by ApiUpload are now strings instead of integers
* (bug 24650) Fix API to work with categorylinks changes
* action=parse now correctly returns an error for nonexistent pages
* (bug 27201) Special:WhatLinksHere output no longer contains duplicate IDs
* (bug 26560) On allusers if limit < total number of users, last user gets duplicate
* (bug 27715) imageinfo didn't respect revdelete
* (bug 27479) API error when using both prop=pageprops and
  prop=info&inprop=displaytitle
* (bug 27862) Useremail module didn't properly return success on success.
* (bug 27590) prop=imageinfo now allows querying the media type
* (bug 27587) list=filearchive now outputs full title info
* (bug 27897) list=allusers and list=users list hidden users
* (bug 22738) Allow filtering by action type on query=logevent.
* (bug 22764) uselang parameter for action=parse.
* (bug 22944) API: watchlist options are inconsistent.
* (bug 22868) don't list infinite block expiry date as "now" in API logevents.
* (bug 22290) prop=revisions now outputs "comment" field even when comment.
  is empty, for consistency with list=recentchanges.
* (bug 19721) API action=help should have a way to just list for a specific
  module.
* (bug 23458) Add support for pageid parameter to action=parse requests.
* (bug 23460) Parse action should have a section option.
* (bug 21346) Make deleted images searchable by hash.
* (bug 23461) Normalise usage of parameter names in parameter descriptions.